@startuml DataModel
hide circle

entity MeasurementLocation
{
    * integer ID
    string Name
}

entity MeasurementType
{
    * integer ID
    string Name
}

entity MeasurementUnit
{
    * integer ID
    string Name
}

entity MeasurementValue
{
    * integer ID
    integer MeasurementTypeID
    integer MeasurementLocationID
    double Value
    integer MeasurementUnitID
    DateTime RecordTime
}

MeasurementValue }|--|| MeasurementType
MeasurementValue }|--|| MeasurementUnit
MeasurementValue }|--|| MeasurementLocation

@enduml
